--- a/frontend/javascripts/app/views/directives/chart-well-switch.html
+++ b/frontend/javascripts/app/views/directives/chart-well-switch.html
@@ -16,7 +16,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<div class="chart-well-switch" style="height: 100%; display: block; overflow: auto; ">
+<div class="chart-well-switch" style="height: 100%; display: block;">
   <table style="height: 100%">
     <tbody>
       <tr>
