--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -314,8 +314,8 @@
             cursor: pointer;
             span {
               img {
-                width: 15px;
-                height: 15px;
+                width: 12px;
+                height: 12px;
               }
             }
           }
@@ -342,7 +342,7 @@
     // margin-bottom: -4px;
     // width: 35%;
     border-left: 2px solid black;
-    overflow: auto;
+    // overflow: auto;
     top: 0px;
     bottom: 50px;
     right: 0px;
