--- a/frontend/stylesheets/standard-curve-chart.css.scss
+++ b/frontend/stylesheets/standard-curve-chart.css.scss
@@ -401,7 +401,7 @@
     // margin-bottom: -4px;
     // width: 35%;
     border-left: 2px solid black;
-    overflow: auto;
+    // overflow: auto;
     top: 0px;
     bottom: 50px;
     right: 0px;
