--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -104,25 +104,11 @@ limitations under the License.
                     <p class="B2">May take a minute</p>
                   </div>
                   <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" on-update-properties="onUpdateProperties" scroll="ampli_scroll.value" show="showAmpliChart"></amplification-chart>
-                  <!-- <div>
-                    <button class="button zoom-button" ng-click="zoomIn()" style="text-align: center; vertical-align: middle; padding-left: 10px; padding-right: 10px; font-size: 20px">+</button>
-                    <button class="button zoom-button" ng-click="zoomOut()" style="text-align: center; vertical-align: middle; padding-left: 10px; padding-right: 10px; font-size: 20px; margin-left: 30px;">-</button>
-                  </div> -->
-                  <!-- <table>
-                    <tr>
-                      <td><button class="button zoom-button" ng-click="zoomIn()" style="height: 30px; text-align: center; vertical-align: middle; padding: 5px">+</button></td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td></td>
-                      <td><button class="button zoom-button" ng-click="zoomOut()">-</button></td>
-                    </tr>
-                  </table> -->
                 </div>  
               </div>
               
               <div style="display: flex; flex-direction: row; height: 10%;">
-                <!-- <div style="position: absolute; padding-top: 0px;">
+                <div style="position: absolute; padding-top: 0px;">
                   <svg style="width: 40x; height: 40px;">
                     <g style="width: 40px; height: 40px;">
                       <line x1=40 y1=5 x2=10 y2=40 stroke="lightgrey" stroke-width=1></line>
@@ -132,7 +118,7 @@ limitations under the License.
                 <div style="position:absolute; display: flex; flex-direction: column;">
                   <button class="button zoom-button" ng-click="zoomIn()" style="text-align: center; vertical-align: middle; font-size: 20px; margin-top:-8px; margin-left: -5px; padding: 0px; width: 30px;">+</button>
                   <button class="button zoom-button" ng-click="zoomOut()" style="text-align: center; vertical-align: middle; font-size: 20px; margin-left: 30px; padding: 0px; width: 30px;">–</button>
-                </div> -->
+                </div>
                 <div style="display: grid; width: 100%; height: 100%; align-content: center; vertical-align: middle; text-align: center">
                    <!-- <font class="G1">Cycle Number</font> -->
                 </div>                
@@ -268,7 +254,7 @@ limitations under the License.
                 </span>
               </td>
               <td class="B2" style="text-align: left">
-                <span class="B2 width1" ng-if="is_dual_channel">
+                <!-- <span class="B2 width1" ng-if="is_dual_channel">
                   <span class="B2" ng-show="wellButtons['well_'+i].ct[1] > 0">
                     {{(wellButtons['well_'+i].ct[1]) | round:2}}
                   </span>
@@ -279,16 +265,16 @@ limitations under the License.
                 <span class="B2 width1" ng-if="!is_dual_channel">
                   <span class="B2 dummy-placeholder"></span>
                   <td class="B2">
-                </span>
+                </span> -->
               </td class="B2" style="text-align: left">
-                <span class="B2 width1">
+                <!-- <span class="B2 width1">
                   <span class="B2 dummy-placeholder"></span>
-                </span>
+                </span> -->
               </td>
               <td class="B2" style="text-align: left">
-                <span class="B2 width1">
+                <!-- <span class="B2 width1">
                   <span class="B2 dummy-placeholder"></span>
-                </span>
+                </span> -->
               </td>
             </tr>
           </tbody>
