--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -37,6 +37,7 @@
     vertical-align: top;
 
     &.selected {
+      background-color: #e4f4fa;
       .ct-cq-container {
         background-color: #e4f4fa;
         // background-color: white;
