--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -77,7 +77,12 @@
     .ct-cq-container {
       border-top: 1px solid #c5c5c5;
       padding: 2px 20px;
+
       min-height: 45px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: calc(100% - 20px)
     }
 
   }
