--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -314,8 +314,9 @@
             cursor: pointer;
             span {
               img {
-                width: 12px;
-                height: 12px;
+                width: 10px;
+                height: 10px;
+                margin-bottom: 3px;
               }
             }
           }
