New experiment nav menu

--- a/frontend/javascripts/app/views/edit-protocol.html
+++ b/frontend/javascripts/app/views/edit-protocol.html
@@ -23,9 +23,7 @@
         <!-- Top part -->
         <header-status experiment-id="protocol.id">
           <div class="stripes" toggle-sidemenu>
-            <div class="stripe"></div>
-            <div class="stripe"></div>
-            <div class="stripe"></div>
+            <img src='/images/menu-white.svg'/>
           </div>
         </header-status>
         <!-- <div class="name-on-top">
