--- a/frontend/javascripts/app/views/experiment/run-experiment.html
+++ b/frontend/javascripts/app/views/experiment/run-experiment.html
@@ -22,9 +22,7 @@
       <header-status experiment-id="experiment.id">
         <div class="stripes-and-name" toggle-sidemenu>
           <div class="stripes">
-            <div class="stripe"></div>
-            <div class="stripe"></div>
-            <div class="stripe"></div>
+            <img src='/images/menu-white.svg'/>
           </div>
         </div>
       </header-status>
