--- a/frontend/javascripts/app/views/plate-layout.html
+++ b/frontend/javascripts/app/views/plate-layout.html
@@ -21,11 +21,9 @@ limitations under the License.
 		<div full-height offset="37" class="test-gradient home-page-wrapper row">
 			<header-status experiment-id="experiment.id">
 				<div class="stripes-and-name" toggle-sidemenu>
-					<div class="stripes">
-						<div class="stripe"></div>
-						<div class="stripe"></div>
-						<div class="stripe"></div>
-					</div>
+			          <div class="stripes">
+			            <img src='/images/menu-white.svg'/>
+			          </div>
 				</div>
 			</header-status>
 
