--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -162,3 +162,13 @@
   font-family: "dinot-bold";
   font-size: 12px;
 }
+
+.B1M {
+  font-family: "dinot-medium";
+  font-size: 16px;
+}
+
+.B2M {
+  font-family: "dinot-medium";
+  font-size: 12px;
+}
