--- a/frontend/stylesheets/directives/menu-overlay.css.scss
+++ b/frontend/stylesheets/directives/menu-overlay.css.scss
@@ -9,7 +9,7 @@ $sidemenu_width: 352px;
   .side-menu-header-container {
     width: 100%;
     height: 50px;
-    background-color: #000;
+    background-color: #333;
 
     .common {
       color: white;
@@ -17,24 +17,35 @@ $sidemenu_width: 352px;
 
     .text-container {
       @extend .common;
-      width: 75%;
+      width: 80%;
       height: 100%;
       float: left;
-      padding-left: 30px;
-      padding-top: 13px;
+      padding-left: 20px;
+      padding-top: 10px;
       cursor: pointer;
+      img{
+        width: 30px;
+        margin-right: 10px;
+      }
     }
     .close-container {
       @extend .common;
-      width: 25%;
+      width: 20%;
       height: 100%;
-      float: left;
+      float: right;
       padding-top: 13px;
       text-align: center;
 
       .close-side-menu {
         cursor: pointer;
         @extend .common;
+        svg {
+          width: 15px;
+          margin-top: 4px;
+          rect{
+            fill: #fff;
+          }
+        }
       }
 
     }
@@ -46,22 +57,40 @@ $sidemenu_width: 352px;
     padding-left: 35px;
     padding-right: 35px;
 
-    .analyze-menu{
+    .analyze-menu, .property-menu{
       .side-menu-menu-item{
-        color: #999;
+        svg{
+          width: 10px;
+        }
         &:hover{
           color: #fff !important;
           background: #00AEEF;
-          padding: 0 5px;
+          margin-left: -10px;
+          padding-left: 10px;
+          svg{
+            & > g{
+              fill: #fff;
+            }
+          }
+        }
+      }
+
+      .side-menu-menu-item.disabled-link{
+        color: #999;
+        &:hover{
+          color: #999 !important;
+          background: inherit;
+          margin-left: 0px;
+          padding-left: 0px;
+          cursor: default;
         }
       }
     }
 
     .side-menu-name-container {
-      height: 156px;
+      height: auto;
       border-bottom: 2px black solid;
       .side-menu-exp-name {
-        height: 80%;
         //font-size: 30px;
 
         .side-top-header{
@@ -81,12 +110,13 @@ $sidemenu_width: 352px;
           }
         }
         .exp-name-container {
-          height: 60px;          
-          span {
+          p {
             font-size: 24px;
             cursor: auto;
+            line-height: 28px;
+            white-space: pre-line;
           }
-          input {
+          textarea {
             font-size: 24px;
             background: transparent;
             margin-top: 0px;
@@ -94,6 +124,7 @@ $sidemenu_width: 352px;
             width: 100%;
             border: none;
             outline: none;
+            line-height: 28px;
           }
         }
         .message-container {
@@ -106,8 +137,8 @@ $sidemenu_width: 352px;
 
       }
       .side-menu-exp-status {
-        height: 20%;
         color: #999;
+        padding-bottom: 5px;        
       }
     }
 
@@ -267,6 +298,11 @@ $sidemenu_width: 352px;
         outline: none;
         font-size: 14px;
         border-radius: 3px;
+        &:hover{
+          background: #df1924;
+          color: #fff;
+          border-color: #df1924;
+        }
       }
 
       .pull-left{
@@ -283,6 +319,50 @@ $sidemenu_width: 352px;
         font-weight: 300;        
       }
     }
+  }
+
+  .side-sub-menu-content-container{
+    width: 352px;
+    height: 100%;
+    padding-left: 25px;
+    padding-right: 25px;
+    position: fixed;
+    top: 50px;
+    left: 352px;
+    background: #fff;
+    z-index: 999;
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa; 
+
+    .side-menu-header-container{
+      background: #fff;
+      .close-container{
+        text-align: right;
+        img{
+          width: 15px;
+        }
+      }
+    }
+
+    .side-menu-menu-container{
+      label.section-name{
+        font-size: 13px;
+        font-family: 'dinot-medium';
+        font-weight: 300;        
+        color: #333;
+      }
+
+      p.notes-text{
+        min-height: 150px;
+        border: 1px solid #aaa;
+        border-radius: 3px;
+        padding: 10px;
+        font-family: 'dinot-regular';
+        font-size: 14px;
+        line-height: 20px;
+      }      
+    }
+
   }
 
   .page-wrapper {
@@ -331,7 +411,7 @@ $sidemenu_width: 352px;
     }
 
     #sidemenu-content {
-      height: 100%;
+      height: 100vh;
       width: $sidemenu_width;
     }
 
