--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -194,3 +194,13 @@
   font-family: "dinot-medium";
   font-size: 12px;
 }
+
+.B1B {
+  font-family: "dinot-bold";
+  font-size: 16px;
+}
+
+.B2B {
+  font-family: "dinot-bold";
+  font-size: 12px;
+}
